src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <label>Account Alias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Classification</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Part_of_APEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Quit_Reason__c</fullName>
        <label>Account Quit Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Rank__c</fullName>
        <description>Top 500, Fortune 1000, user defined</description>
        <label>Account Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Classification__c</fullName>
        <formula>Agreement_Detail__r.Agreement_New_2__c</formula>
        <label>Agreement_Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Detail</label>
        <referenceTo>Agreement_Details__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CED_1__c</fullName>
        <label>CED 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CED_2__c</fullName>
        <label>CED 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <label>Incumbent</label>
        <picklist>
            <picklistValues>
                <fullName>Alsco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriPride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Linen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cintas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prudential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unifirst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <label>Incumbent 2</label>
        <picklist>
            <picklistValues>
                <fullName>Alsco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriPride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Linen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cintas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prudential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unifirst</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Complete__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_B_Employees_Total__c</fullName>
        <label>D B Employees Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Location_Type__c</fullName>
        <label>D B Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Phone__c</fullName>
        <label>D&amp;B - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Quit__c</fullName>
        <label>Date Quit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emblem_Complete__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emblem Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Cash_Value__c</fullName>
        <description>Seller Pre-Opportunity estimated cash value of a prospect</description>
        <label>Estimated Cash Value</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 - 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fit_Session_Complete__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fit Session Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GK_Employees_Here__c</fullName>
        <label>GK Employees Here</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incumbent_DP__c</fullName>
        <label>Incumbent DP</label>
        <picklist>
            <picklistValues>
                <fullName>DP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French-Canadian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Large_Account_Identifier__c</fullName>
        <description>Used to flag Mid-Market (MM) and National Accounts(NA)</description>
        <label>Large Account Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>List of lead sources as defined by National Accounts</description>
        <inlineHelpText>Route:lead via Service
Web:lead via G&amp;K website
Call-in:lead called your location
Referral-Customer:lead via a customer 
Tradeshow:lead via a tradeshow
RFP:lead via a Request for Proposal
Qualified Lead Program-Corporate Use Only:used by Natl Accts</inlineHelpText>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Route</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Lead Program - *Corporate Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge Reports - *S Chicago / Cambridge Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Genie - *Mid Central / Cambridge Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Lead - Salesgenie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mega_Segment__c</fullName>
        <label>Mega Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Segment 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_1__c</fullName>
        <label>Mobile 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_2__c</fullName>
        <label>Mobile 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_3__c</fullName>
        <label>Mobile 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Locations__c</fullName>
        <label>Number of Child Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Wearers__c</fullName>
        <label>Number of Wearers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Incumbent__c</fullName>
        <label>Other Incumbent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rental</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Type_1__c</fullName>
        <label>Program Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Market Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program - Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program - Direct Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.O.G.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Type_2__c</fullName>
        <label>Program Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Market Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program - Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program - Direct Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.O.G.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present/Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Agreement_Complete__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agreement Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soil_Evaluation_Complete__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soil Evaluation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect - Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect - Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect - Previously Quit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark for Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Made at Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Made Elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natl Acct - Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Contracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sweet_Spot__c</fullName>
        <label>Sweet Spot</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_25__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 25</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Digit_Industry__c</fullName>
        <label>2-Digit Industry</label>
        <picklist>
            <picklistValues>
                <fullName>01 Agricultural Crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 Agricultural Production - Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 Agricultural Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Metal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Coal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Nonmetallic Minerals, Except Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 General Building Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Heavy Construction, Exc. Building(Water/Sewer/Utilities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Special Trade Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Food and Kindred Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 Tobacco Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 Textile Mill Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 Apparel and Other Textile Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Lumber and Wood Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 Furniture and Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 Paper and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 Printing and Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Chemicals and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 Petroleum and Coal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Rubber and Misc Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 Leather and Leather Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 Stone, Clay, and Glass Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33 Primary Metal Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 Fabricated Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 Industrial Machinery and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Electronic &amp; Other Electric Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37 Transportation Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Delivery_Location</fullName>
        <active>true</active>
        <label>Delivery Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>